--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -1,56 +1,62 @@
 ##\u81EA\u5B9A\u4E49\u7F51\u5173\u8DEF\u5F84
-#zuul.routes.microservice-books.path=${dev.zuul.routes.microservice-books.path}
+#zuul.routes.microservice-books.path=${zuul.routes.microservice-books.path}
 ##zuul.routes.*,*\u8FD9\u91CC\u7684\u503C\u53EF\u4EE5\u968F\u4FBF\u5199\uFF0C\u53EA\u8981\u4FDD\u8BC1\u5728zuul\u4E0A\u9762\u552F\u4E00\u5373\u53EF
 ##\u5B9E\u4F8B\u7AEF\u53E3
-#server.port=${dev.server.port}
+#server.port=${server.port}
 ##\u5E94\u7528\u7A0B\u5E8F\u540D
-#spring.application.name=${dev.spring.application.name}
+#spring.application.name=${spring.application.name}
 ##\u6570\u636E\u5E93\u8FDE\u63A5\u6C60\u914D\u7F6E
 #spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-#spring.datasource.url=${dev.spring.datasource.url}
-#spring.datasource.username=${dev.spring.datasource.username}
-#spring.datasource.password=${dev.spring.datasource.password}
+#spring.datasource.url=${spring.datasource.url}
+#spring.datasource.username=${spring.datasource.username}
+#spring.datasource.password=${spring.datasource.password}
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.hikari.connection-test-query=${dev.spring.datasource.hikari.connection-test-query}
-#spring.datasource.hikari.connection-timeout=${dev.spring.datasource.hikari.connection-timeout}
-#spring.datasource.hikari.idle-timeout=${dev.spring.datasource.hikari.idle-timeout}
-#spring.datasource.hikari.max-lifetime=${dev.spring.datasource.hikari.max-lifetime}
-#spring.datasource.hikari.maximum-pool-size=${dev.spring.datasource.hikari.maximum-pool-size}
-#spring.datasource.hikari.minimum-idle=${dev.spring.datasource.hikari.minimum-idle}
-#mybatis.mapperLocations=${dev.mybatis.mapperLocations}
-#mybatis.typeAliasesPackage=${dev.mybatis.typeAliasesPackage}
+#spring.datasource.hikari.connection-test-query=${spring.datasource.hikari.connection-test-query}
+#spring.datasource.hikari.connection-timeout=${spring.datasource.hikari.connection-timeout}
+#spring.datasource.hikari.idle-timeout=${spring.datasource.hikari.idle-timeout}
+#spring.datasource.hikari.max-lifetime=${spring.datasource.hikari.max-lifetime}
+#spring.datasource.hikari.maximum-pool-size=${spring.datasource.hikari.maximum-pool-size}
+#spring.datasource.hikari.minimum-idle=${spring.datasource.hikari.minimum-idle}
+#mybatis.mapperLocations=${mybatis.mapperLocations}
+#mybatis.typeAliasesPackage=${mybatis.typeAliasesPackage}
 ##\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
-#eureka.instance.hostname=${dev.eureka.instance.hostname}
-#eureka.instance.prefer-ip-address=${dev.eureka.instance.prefer-ip-address}
+#eureka.instance.hostname=${eureka.instance.hostname}
+#eureka.instance.prefer-ip-address=${eureka.instance.prefer-ip-address}
 ##\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
-#eureka.client.serviceUrl.defaultZone=${dev.eureka.client.serviceUrl.defaultZone}
+#eureka.client.serviceUrl.defaultZone=${eureka.client.serviceUrl.defaultZone}
 ##eureka.instance.non-secure-port=8003
-#eureka.instance.appname=${dev.eureka.instance.appname}
-##\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
-#info.app.name=@project.name@
-#info.app.description=@project.description@
-#info.app.version=@project.version@
+#eureka.instance.appname=${eureka.instance.appname}
+#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
 #\u5B9E\u4F8B\u7AEF\u53E3
-dev.server.port=8003
+server.port=8003
 #\u5E94\u7528\u7A0B\u5E8F\u540D
-dev.spring.application.name=api-gateway
+spring.application.name=api-gateway
 #\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
-dev.eureka.instance.hostname=gateway
-dev.eureka.instance.appname=api-gateway
-dev.eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=gateway
+eureka.instance.appname=api-gateway
+eureka.instance.prefer-ip-address=true
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
-dev.eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
+eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
 #\u81EA\u5B9A\u4E49\u7F51\u5173\u8DEF\u5F84
-dev.zuul.routes.microservice-books.path=/api-gateway/v1/**
+zuul.routes.microservice-books.path=/api-gateway/v1/**
+hystrix.command.default.execution.timeout.enabled=false
 #\u6570\u636E\u5E93\u8FDE\u63A5\u6C60\u914D\u7F6E
-dev.spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8
-dev.spring.datasource.username=root
-dev.spring.datasource.password=whatsfuck1979
-dev.spring.datasource.hikari.connection-test-query=select 1 from dual
-dev.spring.datasource.hikari.connection-timeout=30000
-dev.spring.datasource.hikari.idle-timeout=60000
-dev.spring.datasource.hikari.max-lifetime=1800000
-dev.spring.datasource.hikari.maximum-pool-size=100
-dev.spring.datasource.hikari.minimum-idle=100
-dev.mybatis.mapperLocations=classpath*:sqlmap/*.xml
-dev.mybatis.typeAliasesPackage=com.wujunshen.entity
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=whatsfuck1979
+spring.datasource.hikari.connection-test-query=select 1 from dual
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.maximum-pool-size=100
+spring.datasource.hikari.minimum-idle=100
+mybatis.mapperLocations=classpath*:sqlmap/*.xml
+mybatis.typeAliasesPackage=com.wujunshen.entity
+audience.clientId=098f6bcd4621d373cade4e832627b4f6
+audience.base64Secret=MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
+audience.name=restapiuser
+audience.expiresSecond=7200
