--- a/spring-cloud-provider-book-dubbox/src/main/resources/bootstrap.properties
+++ b/spring-cloud-provider-book-dubbox/src/main/resources/bootstrap.properties
@@ -1,7 +1,9 @@
-#spring.cloud.config.name=monitor
+#spring.cloud.config.name=books-dubbox
 #spring.cloud.config.profile=dev,test,pre,production
 #spring.cloud.config.label=docs
 #spring.cloud.config.uri=http://localhost:8000
+##spring.cloud.zookeeper.connect-string=127.0.0.1:2181
+##management.health.zookeeper.enabled=true
 #logging.levels.org.springframework.boot.env.PropertySourcesLoader=TRACE
 #logging.levels.org.springframework.cloud.config.server=DEBUG
 #spring.profiles.active=dev
@@ -9,3 +11,5 @@
 spring.main.banner-mode=off
 #\u63A7\u5236\u53F0\u989C\u8272\u663E\u793A
 spring.output.ansi.enabled=ALWAYS
+#\u5E94\u7528\u7A0B\u5E8F\u540D
+spring.application.name=microservice-books-dubbox
