--- a/spring-cloud-provider-book/src/main/resources/application.properties
+++ b/spring-cloud-provider-book/src/main/resources/application.properties
@@ -55,3 +55,8 @@ eureka.instance.prefer-ip-address=true
 info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
+spring.sleuth.sampler.percentage=1.0
+spring.rabbitmq.host=172.104.119.101
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=wujunshen
+spring.rabbitmq.password=wujunshen
