--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <description>demo</description>
 
     <modules>
+        <module>spring-cloud-common</module>
         <module>spring-cloud-provider-book</module>
         <module>spring-cloud-provider-book-dubbox</module>
         <module>spring-cloud-service-discovery</module>
@@ -26,7 +27,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>
+        <version>1.5.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <properties>
@@ -39,19 +40,24 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Camden.SR6</version>
+                <version>Dalston.SR2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!--<dependency>-->
+            <!--<groupId>com.wujunshen</groupId>-->
+            <!--<artifactId>spring-cloud-common</artifactId>-->
+            <!--<version>1.0</version>-->
+            <!--</dependency>-->
         </dependencies>
     </dependencyManagement>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+            <!--</plugin>-->
         </plugins>
     </build>
     <repositories>
