--- a/spring-cloud-admin-server/src/main/resources/application.properties
+++ b/spring-cloud-admin-server/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-#\u5173banner
 spring.main.banner-mode=off
-#\u63A7\u5236\u53F0\u989C\u8272\u663E\u793A
 spring.output.ansi.enabled=ALWAYS
-#\u5E94\u7528\u7A0B\u5E8F\u540D
+server.port=8009
 spring.application.name=spring-cloud-admin-server
+spring.boot.admin.url=http://localhost:${server.port}
+spring.jackson.serialization.indent_output=true
+endpoints.health.sensitive=false
 spring.cloud.config.enabled=false
 spring.profiles.active=secure
-#\u5B9E\u4F8B\u7AEF\u53E3
-server.port=8009
 #\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
 eureka.instance.hostname=admin
 ##\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
@@ -22,19 +21,18 @@ eureka.instance.appname=spring-cloud-admin-server
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=true
 #spring.jackson.serialization.indent-output=true
-endpoints.health.sensitive=true
 management.security.enabled=true
 #\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
 info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
 spring.profiles=secure
+security.user.name=root
+security.user.password=root
 spring.boot.admin.username=${security.user.name}
 spring.boot.admin.password=${security.user.password}
 spring.boot.admin.client.metadata.user.name=${security.user.name}
 spring.boot.admin.client.metadata.user.password=${security.user.password}
-security.user.name=root
-security.user.password=root
 spring.boot.admin.routes.endpoints=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,loggers,auditevents,hystrix.stream
 spring.boot.admin.turbine.clusters=default
 spring.boot.admin.turbine.url=http://localhost:8006/turbine.stream
