--- a/spring-cloud-common/pom.xml
+++ b/spring-cloud-common/pom.xml
@@ -115,15 +115,15 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <fork>true</fork>
-                    <jvmArguments>-Xss8m</jvmArguments>
-                    <jvmArguments>-Xmx64m</jvmArguments>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.springframework.boot</groupId>-->
+                <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<fork>true</fork>-->
+                    <!--<jvmArguments>-Xss8m</jvmArguments>-->
+                    <!--<jvmArguments>-Xmx64m</jvmArguments>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 </project>
