--- a/spring-cloud-consumer-book/src/main/resources/application.properties
+++ b/spring-cloud-consumer-book/src/main/resources/application.properties
@@ -1,23 +1,34 @@
-##\u5B9E\u4F8B\u7AEF\u53E3
-#server.port=${server.port}
-##\u5E94\u7528\u7A0B\u5E8F\u540D
-#spring.application.name=${spring.application.name}
-##\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
-#eureka.instance.hostname=${eureka.instance.hostname}
-#eureka.instance.prefer-ip-address=${eureka.instance.prefer-ip-address}
-##\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
-#eureka.client.serviceUrl.defaultZone=${eureka.client.serviceUrl.defaultZone}
-#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
 info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
-#\u5B9E\u4F8B\u7AEF\u53E3
 server.port=8004
-#\u5E94\u7528\u7A0B\u5E8F\u540D
 spring.application.name=microservice-consumer-books
-#\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
 eureka.instance.hostname=consumer
-eureka.instance.prefer-ip-address=true
-#\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
+eureka.instance.prefer-ip-address=false
 eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
+eureka.instance.appname=microservice-consumer-books
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=whatsfuck1979
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hikari.connection-test-query=select 1 from dual
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.maximum-pool-size=100
+spring.datasource.hikari.minimum-idle=100
+mybatis.mapperLocations=classpath*:sqlmap/*.xml
+mybatis.typeAliasesPackage=com.wujunshen.entity
+spring.redis.database=0
+spring.redis.host=172.104.119.101
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.timeout=20000
+spring.redis.pool.max-active=8
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-wait=-1
+#spring.redis.cluster.nodes=ip1:port1,ip2:port2
+#spring.redis.cluster.max-redirects=6
 
